@@ -1,5 +1,7 @@
 2005-11-01  Kevin P. Fleming  <kpfleming@digium.com>
 
+	* apps/app_cut.c (cut_internal): use ast_separate_app_args() instead of open code (issue #5560)
+
 	* apps/app_mixmonitor.c (launch_monitor_thread): ast_strlen_zero can handle NULL input (issue #5561)
 	(mixmonitor_exec): same
 
